<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".home.presentation.HomeFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_default" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pages"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:paddingStart="@dimen/normal_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:itemCount="5"
        tools:listitem="@layout/item_page_button" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/homeScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_pages"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPosters"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:paddingStart="@dimen/normal_100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/originals"
                style="@style/TitleSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_originals"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvPosters" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOriginals"
                android:layout_width="0dp"
                android:layout_height="170dp"
                android:layout_marginTop="@dimen/normal_100"
                android:clipToPadding="false"
                android:paddingStart="@dimen/normal_100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/originals"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/premium"
                style="@style/TitleSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_premium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvOriginals" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPremium"
                android:layout_width="0dp"
                android:layout_height="170dp"
                android:layout_marginTop="@dimen/normal_100"
                android:layout_marginBottom="@dimen/normal_100"
                android:clipToPadding="false"
                android:paddingStart="@dimen/normal_100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/premium"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/emptyLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_pages"
        tools:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_data_to_show"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
